      * The FW epilogue missions are no longer marked as minor. (@Anarchist2)
      * The Core Blockade mission now gives clearance to land on the pirate planet destination. (@Amazinite)
      * The Remembrance Day jobs now properly have a deadline. (@Amazinite)
      * Shortened the descriptions of some jobs as to not overflow the UI. (@Amazinite)
    * Engine bugs:
      * Missions with illegal cargo that fail when scanned can no longer be scanned again before landing. (@Amazinite)
      * The outfitter will no longer allow purchasing licensed outfits under certain circumstances where the player didn't have a license. (@Rakete1111)
      * Planets without a spaceport but with a jobs board will no longer skip generating jobs. (@Amazinite)
      * Ships will no longer attempt to route through undefined systems. (@Elorram)
      * Infinitely nested submunitions will no longer crash the game. (@Rakete1111)
      * Fixed a potential divide-by-zero error. (@tehhowch)
      * Escorts will now properly obey the hold command when they are already moving to hold position. (@petervdmeer)
      * Fixed a potential null pointer exception. (@petervdmeer)
      * News with no message will no longer be chosen. (@tehhowch)
      * Fixed a potential floating point exception related to mortgages created through save editing. (@tehhowch)
      * Fixed a segfault that involved the player rapidly cycling through ships in the info panel while moving the mouse. (@tehhowch)
      * Unvisited systems that are selected on the map in the outfitter/shipyard key no longer display whether they have an outfitter/shipyard. (@tehhowch)
      * Prevented factions that didn't share a language with the player from sending hails. (@Amazinite)
      * The motion blur effect no longer persists if the player's flagship is destroyed while in motion. (@bobrobbow)
      * Ships will now save various non-numerical attributes that they previously did not. (@Amazinite)