@@ -30,6 +30,7 @@ Version 0.9.13:
       * The Core Blockade mission now gives clearance to land on the pirate planet destination. (@Amazinite)
       * The Remembrance Day jobs now properly have a deadline. (@Amazinite)
       * Shortened the descriptions of some jobs as to not overflow the UI. (@Amazinite)
+      * Added missing "variant" keyword to NPC fleets in several Wanderer missions. (@tehhowch)
     * Engine bugs:
       * Missions with illegal cargo that fail when scanned can no longer be scanned again before landing. (@Amazinite)
       * The outfitter will no longer allow purchasing licensed outfits under certain circumstances where the player didn't have a license. (@Rakete1111)
@@ -62,6 +63,7 @@ Version 0.9.13:
       * All flagship commands and the hailing command are now ignored while in the process of landing or departing from a planet. (@tatami4)
       * Ships no longer preserve inaccessible jump targets when loading the game. (@tehhowch)
       * Reduced likelihood of integer overflow when selling commodities. (@tehhowch)
+      * Fixed a divide-by-zero error when a fleet contains no variant definitions. (@tehhowch)
   * Game content:
     * New content: 
       * New missions:
